	* view.c (view_ccache_lookup): Rewrote the calculation of the
	cache entry. Also don't put entries in the cache when the
	current byte is '\r'.
	* view.c (view_ccache_dump): Extended the output by the offset
	of the next line.
	* dialog.h (struct Dlg_head): Changed the bit fields of length one
	from signed int to unsigned int.
	* wtools.h: Replaced 0 with LISTBOX_APPEND_AT_END.

2005-08-15  Jindrich Makovicka  <makovick@kmlinux.fjfi.cvut.cz>

	* view.c: Made the search function interruptible.

2005-08-06  Roland Illig  <roland.illig@gmx.de>

	* textconf.c: Include ecs_char in the list of type
	characteristics that are printed.
	* view.c (view_growbuf_read_until): On short reads, try to read
	one more byte to check whether we're already at the end of file.
	This makes the ">=" disappear earlier.

2005-08-05  Pavel Tsekov  <ptsekov@gmx.net>

	* menu.c (menubar_draw): Use hline() instead of addch() to clear
	the menubar widget area.

2005-07-31  Roland Illig  <roland.illig@gmx.de>

	* view.c: Removed global variable have_fast_cpu. It is not used
	anymore.
	* view.h: Renamed view to mc_internal_viewer. This avoids
	hundreds of shadowed names in view.c.

2005-07-31  Roland Illig  <roland.illig@gmx.de>

	* user.c (execute_menu_command): Allow execution on no-exec
	filesystems. This fixes Savannah Bug #13832.

2005-07-31  Roland Illig  <roland.illig@gmx.de>

	* Makefile.am: Added support for extended character sets.
	* ecs.h: Support for extended character sets.
	* ecs.c: Likewise.
	* ecs-test.c: Testsuite for ecs.c.

2005-07-27  Adam Byrtek  <alpha@debian.org>

	* utilunix.c (mc_tmpdir): Check that tmpdir is correctly initialized.

2005-07-24  Leonard den Ottolander  <leonard den ottolander nl>

	* wtools.h: #include "widget.h" and remove redundant declarations
	of Dlg_head and WListbox;

2005-07-23  Roland Illig  <roland.illig@gmx.de>

	* util.c (save_file_position): Only save the position if not
	at the beginning of the file (1;0).