@@ -12,6 +12,7 @@
 	* dialog.h (struct Dlg_head): Changed the bit fields of length one
 	from signed int to unsigned int.
 	* wtools.h: Replaced 0 with LISTBOX_APPEND_AT_END.
+	* achown.c: Likewise.
 
 2005-08-15  Jindrich Makovicka  <makovick@kmlinux.fjfi.cvut.cz>
 
